vlib/v/checker/tests/index_expr.out
vlib/v/checker/tests/index_expr.vv:3:7: error: type `int` does not support indexing
    1 | fn test_invalid_index() {
    2 |     v := 4
    3 |     _ = v[0]
      |          ~~~
    4 |
    5 |     a := [2]
vlib/v/checker/tests/index_expr.vv:6:7: error: non-integer index `[]int` (array type `[]int`)
    4 |
    5 |     a := [2]
    6 |     _ = a[a]
      |          ~~~
    7 |     _ = a[-1]
    8 | }
vlib/v/checker/tests/index_expr.vv:7:8: error: invalid index `-1` (index must be non-negative)
    5 |     a := [2]
    6 |     _ = a[a]
    7 |     _ = a[-1]
      |           ^
    8 | }
    9 |
vlib/v/checker/tests/index_expr.vv:12:7: error: type `int` does not support indexing
   10 | fn test_invalid_slice() {
   11 |     v := 4
   12 |     _ = v[1..]
      |          ~~~~~
   13 |     _ = v[..1]
   14 |
vlib/v/checker/tests/index_expr.vv:13:7: error: type `int` does not support indexing
   11 |     v := 4
   12 |     _ = v[1..]
   13 |     _ = v[..1]
      |          ~~~~~
   14 |
   15 |     a := [2]
vlib/v/checker/tests/index_expr.vv:16:7: error: non-integer index `[]int` (array type `[]int`)
   14 |
   15 |     a := [2]
   16 |     _ = a[a..]
      |          ~~~~~
   17 |     _ = a[..a]
   18 |     _ = a[-1..]
vlib/v/checker/tests/index_expr.vv:17:7: error: non-integer index `[]int` (array type `[]int`)
   15 |     a := [2]
   16 |     _ = a[a..]
   17 |     _ = a[..a]
      |          ~~~~~
   18 |     _ = a[-1..]
   19 |     _ = a[..-1]
vlib/v/checker/tests/index_expr.vv:18:8: error: invalid index `-1` (index must be non-negative)
   16 |     _ = a[a..]
   17 |     _ = a[..a]
   18 |     _ = a[-1..]
      |           ^
   19 |     _ = a[..-1]
   20 |     _ = a[-1..-2]
vlib/v/checker/tests/index_expr.vv:19:10: error: invalid index `-1` (index must be non-negative)
   17 |     _ = a[..a]
   18 |     _ = a[-1..]
   19 |     _ = a[..-1]
      |             ^
   20 |     _ = a[-1..-2]
   21 | }
vlib/v/checker/tests/index_expr.vv:20:8: error: invalid index `-1` (index must be non-negative)
   18 |     _ = a[-1..]
   19 |     _ = a[..-1]
   20 |     _ = a[-1..-2]
      |           ^
   21 | }
